--- a/BioVitalAge/templates/includes/Calendario.html
+++ b/BioVitalAge/templates/includes/Calendario.html
@@ -729,7 +729,7 @@
     </div>
 
     <script>
-        isSecretary = {{ is_secretary|lower }};
+        window.isSecretary = {{ is_secretary|lower }};
     </script>
 </body>
 </html>
