--- a/BioVitalAge/templates/cartella_paziente/indici_di_performance/valutazioneMS.html
+++ b/BioVitalAge/templates/cartella_paziente/indici_di_performance/valutazioneMS.html
@@ -67,88 +67,95 @@
                     </p>
                     <p>»</p>
                     <p class="breadcrumb">Valutazione Muscolo Scheletrica</p>
-                    
                 </div>
-            
             </div>
-
-
 
             <form method="POST" action="{% url 'valutazione_m_s' persona.id %}">
 
                 {% csrf_token %}
 
                 <div class="card-container">
+
                         <div class="title-container">
-                            <img src="{% static 'image/Capacita_Fisica.png' %}" alt="">
-                            <h3>Attività fisica:</h3>
+                            <div class="circle-img">
+                                <img src="{% static 'image/fisica_color.png' %}" alt="">
+                            </div>
+                            <h3>Attività fisica</h3>
                         </div>
                             
-                        <div class="table-container">
+                        <div class="table-container" style="height: 330px;">
+
                             <div class="table-row">
-                                <p class="question">Quanto spesso svolgi attività fisica?</p>
+                                <div class="question-container">
+                                    <p class="question">Quanto spesso svolgi attività fisica?</p>
+                                </div>
+                                
 
                                 <div class="container-risposte">
                                     <div class="cella-container">
-                                        <input type="radio" name="frequenza_a_f" id="">
+                                        <input type="radio" name="frequenza_a_f">
                                         <label for="">Mai</label>
                                     </div>
                                     <div class="cella-container">
-                                        <input type="radio" name="frequenza_a_f" id="">
+                                        <input type="radio" name="frequenza_a_f">
                                         <label for="">1 volta a settimana</label>
                                     </div>
                                     <div class="cella-container">
-                                        <input type="radio" name="frequenza_a_f" id="">
+                                        <input type="radio" name="frequenza_a_f">
                                         <label for="">2-3 volte a settimana</label>
                                     </div>
                                     <div class="cella-container">
-                                        <input type="radio" name="frequenza_a_f" id="">
+                                        <input type="radio" name="frequenza_a_f">
                                         <label for="">4 o più volte a settimana</label>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="table-row">
-                                <p class="question">Che tipo di attività fisica pratichi più frequentemente?</p>
+                                <div class="question-container">
+                                    <p class="question">Che tipo di attività fisica pratichi più frequentemente?</p>
+                                </div>
 
                                 <div class="container-risposte">
                                     <div class="cella-container">
-                                        <input type="radio" name="tipo_a_f" id="">
+                                        <input type="radio" name="tipo_a_f">
                                         <label for="">Nessuna attività fisica</label>
                                     </div>
                                     <div class="cella-container">
-                                        <input type="radio" name="tipo_a_f" id="">
+                                        <input type="radio" name="tipo_a_f">
                                         <label for=""> Attività a basso impatto (es. camminata, yoga, stretching)</label>
                                     </div>
                                     <div class="cella-container">
-                                        <input type="radio" name="tipo_a_f" id="">
+                                        <input type="radio" name="tipo_a_f">
                                         <label for=""> Attività aerobica (es. corsa, bici, nuoto)</label>
                                     </div>
                                     <div class="cella-container">
-                                        <input type="radio" name="tipo_a_f" id="">
+                                        <input type="radio" name="tipo_a_f">
                                         <label for="">Attività di forza o resistenza (es. pesi, corpo libero, crossfit)</label>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="table-row">
-                                <p class="question">Quale delle seguenti affermazioni descrive meglio il tuo stile di vita quotidiano?</p>
+                                <div class="question-container">
+                                    <p class="question">Quale delle seguenti affermazioni descrive meglio il tuo stile di vita quotidiano?</p>
+                                </div>
 
                                 <div class="container-risposte">
                                     <div class="cella-container">
-                                        <input type="radio" name="stile_vita" id="">
+                                        <input type="radio" name="stile_vita">
                                         <label for="">Stile di vita completamente sedentario (lavoro e tempo libero principalmente da seduto)</label>
                                     </div>
                                     <div class="cella-container">
-                                        <input type="radio" name="stile_vita" id="">
+                                        <input type="radio" name="stile_vita">
                                         <label for="">Stile di vita leggermente attivo (qualche camminata, movimenti durante il giorno)</label>
                                     </div>
                                     <div class="cella-container">
-                                        <input type="radio" name="stile_vita" id="">
+                                        <input type="radio" name="stile_vita">
                                         <label for=""> Moderatamente attivo (mi muovo regolarmente e faccio esercizio fisico)</label>
                                     </div>
                                     <div class="cella-container">
-                                        <input type="radio" name="stile_vita" id="">
+                                        <input type="radio" name="stile_vita">
                                         <label for="">Molto attivo (attività fisica quotidiana o lavoro fisicamente impegnativo)</label>
                                     </div>
                                 </div>
@@ -158,7 +165,9 @@
 
                 <div class="card-container">
                     <div class="title-container">
-                        <img src="{% static 'image/Muscolo_Violet.png' %}" alt="">
+                        <div class="circle-img">
+                            <img src="{% static 'image/anamnesi_color.png' %}" alt="" style="width: 30px;height: 30px;">
+                        </div>
                         <h3>Anamnesi muscolo-scheletrica:</h3>
                     </div>
                         
@@ -718,6 +727,147 @@
 
                     </div>      
                 </div>
+                
+                <!-- DOMINIO DELLA LOCOMOZIONE -->
+                <div class="question" data-group="5" id="locomozione" data-title="dominio locomozione">
+
+                        <div class="title-container">
+                            <div class="title-subtitle">
+                                <h3>Dominio Locomozione</h3>
+                                <p class="sottotitolo">Test di alzata da sedia (Chair Stand Test)</p>
+                            </div>
+                        </div>
+
+                        <div class="tableAnswer">
+                            <div class="tableAnswer-header">
+                                <p class="subtitle"></p>
+                                <p class="subtitle">N° Ripetizioni</p>
+                                <p class="subtitle">Tempo tot in secondi</p>
+                                <p class="subtitle">Formula del punteggio</p>
+                            </div>
+                
+                            <div class="tableAnswer-container" id="secondTypeTable">
+                                <div class="tableRow">
+                                    <p>5STS</p>
+                                    <p>
+                                        <input type="text" name="numero_rip" placeholder="Inserisci il valore">
+                                    </p>
+                                    <p>
+                                        <input type="text" name="tot_secondi" placeholder="Inserisci il valore">
+                                    </p>
+                                    <p id="long-p">
+                                        <span>Punteggio 5STS = </span>
+                                        <span>Numero di ripetizioni (5) <br> <span class="line-divisor d-block"></span> </span>
+                                        <span>Tempo totale in secondi</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <p class="sottotitolo" style="margin-top: 40px;">Test della velocità del cammino (Gait Speed)</p>
+                        <div class="tableAnswer">
+                            <div class="tableAnswer-header">
+                                <p class="subtitle"></p>
+                                <p class="subtitle">Distanza</p>
+                                <p class="subtitle">Tempo in secondi</p>
+                                <p class="subtitle">Formula del punteggio</p>
+                            </div>
+                
+                            <div class="tableAnswer-container" id="secondTypeTable">
+                                <div class="tableRow">
+                                    <p>Gait Speed</p>
+                                    <p>
+                                        <input type="text" name="distanza" placeholder="Inserisci il valore">
+                                    </p>
+                                    <p>
+                                        <input type="text" name="tempo_s" placeholder="Inserisci il valore">
+                                    </p>
+                                    <p id="long-p">
+                                        <span>Velocità di andatura = </span>
+                                        <span>Distanza (3 metri) <br> <span class="line-divisor d-block"></span> </span>
+                                        <span>Tempo in secondi</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <p class="sottotitolo" style="margin-top: 40px;">Pick Pencil Test</p>
+                        <div class="tableAnswer">
+                            <div class="tableAnswer-header">
+                                <p class="subtitle">Tempo in secondi</p>
+                                <p class="subtitle">Formula del punteggio</p>
+                            </div>
+                
+                            <div class="tableAnswer-container" id="secondTypeTable">
+                                <div class="tableRow">
+                                    <p>
+                                        <input type="text" name="tempo_s_pick" placeholder="Inserisci il valore">
+                                    </p>
+                                    <p id="long-p">
+                                        <span>Punteggio Pick Pencil Test = </span>
+                                        <span>1</span>
+                                        <span><span class="line-divisor d-block"></span> Tempo in secondi</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <p class="sottotitolo" style="margin-top: 40px;">Questionario Sarcopenia</p>
+                        
+                        <div class="tableAnswer">
+
+                            <div class="tableAnswer-header">
+                                <p class="subtitle"></p>
+                                <p class="subtitle">Domanda</p>
+                                <p class="subtitle">Mai</p>
+                                <p class="subtitle">A volte</p>
+                                <p class="subtitle">Spesso/Con ausili/Inabile</p>
+                            </div>
+
+                            <div class="tableAnswer-container" id="secondTypeTable">
+                                <div class="tableRow">
+                                    <p>Forza</p>
+                                    <p style="text-align: left;">Fa difficoltà a sollevare/trasportare 4.5kg?</p>
+                                    <p><input type="radio" name="Sarc_1" value="0"></p>
+                                    <p><input type="radio" name="Sarc_1" value="1"></p>
+                                    <p><input type="radio" name="Sarc_1" value="2"></p>
+                                </div>
+
+                                <div class="tableRow">
+                                    <p>Assistenza alla deambulazione</p>
+                                    <p style="text-align: left;">Fa difficoltà a camminare all'interno di una stanza?</p>
+                                    <p><input type="radio" name="Sarc_2" value="0"></p>
+                                    <p><input type="radio" name="Sarc_2" value="1"></p>
+                                    <p><input type="radio" name="Sarc_2" value="2"></p>
+                                </div>
+
+                                <div class="tableRow">
+                                    <p>Alzarsi dalla sedia</p>
+                                    <p style="text-align: left;">Fa difficoltà ad alzarsi dal letto/dalla sedia?</p>
+                                    <p><input type="radio" name="Sarc_3" value="0"></p>
+                                    <p><input type="radio" name="Sarc_3" value="1"></p>
+                                    <p><input type="radio" name="Sarc_3" value="2"></p>
+                                </div>
+
+                                <div class="tableRow">
+                                    <p>Salire le scale</p>
+                                    <p style="text-align: left; margin-left: -25px; margin-right: 25px;">Fa difficoltà a salire 10 scalini?</p>
+                                    <p><input type="radio" name="Sarc_4" value="0"></p>
+                                    <p><input type="radio" name="Sarc_4" value="1"></p>
+                                    <p><input type="radio" name="Sarc_4" value="2"></p>
+                                </div>
+
+                                <div class="tableRow">
+                                    <p>Cadute</p>
+                                    <p style="text-align: left;">Quante volte è caduto/a nell'ultimo anno?</p>
+                                    <p><input type="radio" name="Sarc_5" value="0"></p>
+                                    <p><input type="radio" name="Sarc_5" value="1"></p>
+                                    <p><input type="radio" name="Sarc_5" value="2"></p>
+                                </div>
+                            </div>
+                        </div>  
+                </div>
+
 
                 <div class="toolkit">
                     <img src="{% static 'image/Arrow_Back.png' %}" alt="" style="width: 40px; height: 40px;">
