--- a/BioVitalAge/templates/includes/cartellaPaziente.html
+++ b/BioVitalAge/templates/includes/cartellaPaziente.html
@@ -114,13 +114,15 @@
                 <div class="informazioni-personali">
                     <h3>{{ persona.surname }} {{ persona.name }}</h3>
                     <h3>C.F.: {{ persona.codice_fiscale }}</h3>
-                    <h3>{{ persona.dob|date:'d·m·Y' }}, {{ persona.residence }} - sesso: {{ persona.gender }} - età: {{ persona.chronological_age }} </h3>
+                    <h3>residenza: {{ persona.residence }} - età: {{ persona.chronological_age }} </h3>
+
+                    <!-- {{ persona.dob|date:'d.m.Y' }}, -->
 
                     {% if persona.email %}
                     <h3>{{ persona.email }}</h3>
                     {% endif %}
                     {% if persona.phone %}
-                    <h3>{{ persona.phone }}</h3> 
+                    <h3>tel: {{ persona.phone }}</h3> 
                     {% endif %}
                 </div>
 
@@ -775,7 +777,7 @@
                                     <path class="wavePath" d="M0,30 C150,80 350,0 500,40 L500,100 L0,100 Z" />
                                 </svg>
                             </div>
-                            <img src="{% static 'image/Eta_biologica2.png' %}" alt="" width="120px" height="120px">
+                            <img src="{% static 'image/EtaBiologica_color.png' %}" alt="" width="120px" height="120px">
                         </div>
                         <p class="descrizione-vitale"><strong>Punteggio:</strong> {{ referti_test_recenti.resilienza|default:'n.a.' }}</p>
                     </a>
@@ -790,7 +792,7 @@
                                     <path class="wavePath" d="M0,30 C150,80 350,0 500,40 L500,100 L0,100 Z" />
                                 </svg>
                             </div>
-                            <img src="{% static 'image/Eta_neurologica.png' %}" alt="" width="120px" height="120px">
+                            <img src="{% static 'image/mente.png' %}" alt="" width="120px" height="120px">
                         </div>
                         <p class="descrizione-vitale"><strong>Punteggio:</strong> {{ referti_test_recenti.resilienza|default:'n.a.' }}</p>
                     </a>
